[package]
name = "more_about_cargo"
version = "0.1.0"
authors = ["Attila Bagossy <bagossyattila@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
